--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
   <div id="roundNumber" class="round-counter"></div>
   <hr/>
-  <div id="userChoiceContainer" class="flex-layout">
-    <p>Your choice:</p>
-  </div>
+  <p>Your choice:</p>
+  <div id="userChoiceContainer" class="flex-layout"></div>
   <hr id="yourChoiceSeperator"/>
   <p id="computerChoiceLabel">Computer choice:</p>
   <figure id="computerChoiceContainer"></figure>
